--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.3",
-    "react-native-check-box": "^1.0.4"
+    "react-native-check-box": "^1.0.4",
+    "react-native-storage": "^0.1.5"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
